static/css/style.css
/*main tags rules*/

h1, h2, h3, p {
    padding: 0;
    margin: 0;
}

/* General styles */

.bg-head {
    background-color: #F5F1E3 !important;
}

.links {
    text-decoration: none;
    color: black;
}

.links:hover {
    text-decoration: none;
}

.btn-placement {
    display: flex;
    justify-content: center;
}

/* Buttons */

.btn-edit {
    color: black !important;
    background-color: #1B9AAA !important;
    border-color: #313638 !important;
    text-decoration: none;
    width: fit-content;
}

/* Images */

.image-high {
    max-height: 70vh;
    width: auto;
}

@media (max-width:480px){
    .image-high {
        max-height: 50vh;
        width: auto;
    }
    
}

.carousel-style {
    max-width: 70vw;
}

/* Home Page */

.main-title{
    font-size: 35px;

}

.background {
    border: 1px solid #1B9AAA;
    border-radius: 15px;
    background-color: rgba(255, 255, 255, 0.4);
}

.outlined-text {
    text-shadow:
    -1px -1px 0 #313638,
     1px -1px 0 #313638,
    -1px 1px 0 #313638,
     1px 1px 0 #313638;
}

.hide {
    display: none;
}

.main-title::before  {
    position: absolute;
    content: "";
    width: 25%;
    height: 25%;
    left: 10%;
    top: 0;
    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center center;
    z-index: 1;
    opacity: 0.5;

  }

  @media (max-width:768px){
    .main-title::before  {
        position: absolute;
        content: "";
        width: 20%;
        height: 20%;
        top: 0;
        background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center center;
        z-index: 1;
        opacity: 0.5;

      }

  }

/* Testeminies */

.reason {
    padding: 10px;
}

.reason:hover {
    border: 1px solid #313638;
    border-radius: 5px;
    background-color: #F5F1E3;
    padding: 20px;
}

/* Advice */

.sign-heading {
    text-decoration: underline;
    text-decoration-color:#126a75 ;
    text-underline-offset: 8px;
    padding-left: 10px;
}

.impoartant-msg {
    font-style: italic;
    padding: 10px;
}

.impoartant-msg:hover {
    border: 2px solid #313638;
    border-radius: 5px;
    color: red;
    font-weight: 700;
    font-size: larger;
}

/* This color could also be the "bone" color */
.testemony:hover {
    background-color: #F5F1E3;
    font-weight: 500;
}

.testemony:hover > .text-muted {
    color: #313638 !important;
}

/* Report Form */

.full-form {
    margin: 15px;
    border: 1px solid #313638;
    border-radius: 5px;
    background-color: #F5F1E3;
}

.form-group {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 15px;
  }

  .form-group label {
    margin-left: 10%;
    text-align: left;
  }

  .form-group input,
  .form-group select,
  .form-group textarea {
    margin-left: 10%;
    width: 80%;
  }

  #add-details-button {
    float: right;
    margin-right: 15px;
  }

/* Colors */

.onyx {
    color: #313638;
}

.munsell {
    color: #1B9AAA;
}

.bone {
    color: #DDDBCB;
}

.oldlace {
    color: #F5F1E3;
}

.white {
    color: #FFFFFF;
}

.bg-onix{
    background-color: #313638!important;
}

/*Nav bar elements*/

.nav-link {
    color: white!important;
    position: relative;
}

.nav-link:hover {
    color: #1B9AAA!important;
    transition: 0.5s ease-in-out all;
}

.nav-link::before{
    position: absolute;
    content: "";
    bottom: 0;
    left: 0;
    border-bottom: #1B9AAA solid 1px ;
    width: 0%;
    text-align: center;
    transition: all 0.3s ease-in-out;

}

.nav-link:hover::before {
    width: 100%;
}

@media (max-width:990px){

    .nav-link:hover::before {
        width: 15%;
    }
}

/* Homepage carousel */
#story-carousel {
    max-width: 1200px;
    margin: auto;
}

#carousel-stories-heading {
    text-align: center;
    padding-top: 1em;
}

/* .carousel-seperator {
    max-width: 60%;
    margin: auto;
} */

.carousel-item {
    height: 15em;
}

.carousel-story-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 10em;
    text-align: center;
    width: 70%;
    margin: auto;
}

.carousel-arrows {
    width: 64px;
    max-width: 100%;
}

.carousel-control-next, .carousel-control-prev {
   max-width: 15%;
}

.carousel-control-next:not(:hover), .carousel-control-prev:not(:hover){
    opacity: 0.5;
}

#read-more-stories-link {
    text-decoration: none;
    color:black;
    margin: 1em;
    display: inline-block;
    font-weight: bold;
}

